--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li>Hébergement</li> <!--Ancre/Bleu au toucher/Barre en haut-->
                     <li>Activités</li> <!--Ancre/Bleu au toucher/Barre en haut-->
-                    <li><b>S'inscrire</b></li>
+                    <li><b>S'inscrire</b></li> <!--Bleu-->
                 </ul>
 <!--Section 2 - Menu-->
                 <H1><strong>Trouvez votre hébergement pour des vacances de rêve</strong></H1>
@@ -30,7 +30,7 @@
                 <li>Animaux autorisés</li>
             </ul>
 
-                <!--<img src="images/logo/infobox.svg.png" alt="logo information">-->
+                <!--<img src="images/logo/infobox.svg.png" alt="logo information"> noir ext et bleu int-->
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
 
 <!--Section 3 A Gauche 2/3/Fond Gris-->
